--- a/home/wiki/Main_Page.html
+++ b/home/wiki/Main_Page.html
@@ -88,32 +88,24 @@
       <span class="mw-headline" id="Release_notes">Release notes</span>
     </h2>
     <p>
-      v3.10.3.1 features the following:
+      v3.10.4.1 features the following:
     </p>
     <ul>
       <li>
-        (PC) Fix 2016-10 entries for English and German Wikipedia not showing in Download Central
+        (Wiki) Release 2016-10 English and German wikis (Wiktionary, Wikisource, Wikivoyage, Wikiquote, Wikibooks, Wikiversity, Wikinews)
+      </li>
+      <li>
+        (PC / Android) Allow filtering wikis by language / type in Download Central
+      </li>
+      <li>
+        (PC) Add better support for English Wikivoyage
+      </li>
+      <li>
+        (PC) Fix import errors in Import/Offline
       </li>
     </ul>
     <p>
-      v3.10.3.1 features the following:
-    </p>
-    <ul>
-      <li>
-        (Wiki) Release 2016-10 English and German Wikipedia
-      </li>
-      <li>
-        (PC) Multiple category changes, including performance, international sorting, numeric sorting, and HTML database loading
-      </li>
-      <li>
-        (PC) (PC) Fix for "Script error: index out of bounds" on 2016-10 enwiki pages
-      </li>
-      <li>
-        (PC) Add custom scripting support through standalone javascript / lua files
-      </li>
-    </ul>
-    <p>
-      For more details about this release, please see the <a href="http://xowa.org/home/wiki/Blog.html" id="xolnki_3" title="Blog">blog</a> and the <a href="http://xowa.org/home/wiki/Change_log.html" id="xolnki_4" title="Change log">change log</a>.
+      For more details about this release, please see the <a href="http://xowa.org/home/wiki/Blog.html" id="xolnki_3" title="Blog">blog</a> and the <a href="http://xowa.org/home/wiki/Change_log.html" id="xolnki_4" title="Change log" class="xowa-visited">change log</a>.
     </p>
     <p>
       For more details about the release schedule, please see <a href="http://xowa.org/home/wiki/Help/Release_schedule.html" id="xolnki_5" title="Help/Release schedule">the release schedule</a>.
@@ -162,7 +154,7 @@
         </dl>
       </dd>
       <dd>
-        Feel free to look around during the import process. You can start at <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_6" title="Help/Contents">Help/Contents</a>. When the process completes, it will open Simple Wikipedia.
+        Feel free to look around during the import process. You can start at <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_6" title="Help/Contents" class="xowa-visited">Help/Contents</a>. When the process completes, it will open Simple Wikipedia.
       </dd>
     </dl>
     <dl>
@@ -412,7 +404,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_39" title="Help/Contents">Contents</a>
+          <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_39" title="Help/Contents" class="xowa-visited">Contents</a>
         </td>
         <td>
           View all help topics
@@ -428,7 +420,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Change_log.html" id="xolnki_41" title="Change log">Change log</a>
+          <a href="http://xowa.org/home/wiki/Change_log.html" id="xolnki_41" title="Change log" class="xowa-visited">Change log</a>
         </td>
         <td>
           View changes for each XOWA release
