--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 <td width='20%' valign='top' style='padding-left:5px;'> 
   <h2><span class='mw-headline' id='Recent_News'> Recent News </span></h2>
 
-  <b>2016-10-16</b> English and German Wikipedia updated<br/>
+  <b>2016-10-24</b>2016-10 English and German Wikis updated (Wiktionary, Wikisource, Wikivoyage, Wikiquote, Wikibooks, Wikiversity, Wikinews)<br/>
   <ul>
     <li> <a href="https://archive.org/details/Xowa_enwiki_latest" class="external text" rel="nofollow">English Wikipedia</a>
     </li>
@@ -109,7 +109,15 @@
     </li>
   </ul>
 
-  <b>2016-09-25</b> French, English and German Wikipedia updated<br/>
+  <b>2016-10-16</b>2016-10 English and German Wikipedia updated<br/>
+  <ul>
+    <li> <a href="https://archive.org/details/Xowa_enwiki_latest" class="external text" rel="nofollow">English Wikipedia</a>
+    </li>
+    <li> <a href="https://archive.org/details/Xowa_dewiki_latest" class="external text" rel="nofollow">German Wikipedia</a>
+    </li>
+  </ul>
+
+  <b>2016-09-25</b>2016-09 French, English and German Wikipedia updated<br/>
   <ul>
     <li> <a href="https://archive.org/details/Xowa_frwiki_latest" class="external text" rel="nofollow">French Wikipedia</a>
     </li>
