--- a/home/wiki/Change_log/2014.html
+++ b/home/wiki/Change_log/2014.html
@@ -4026,7 +4026,7 @@
         Math: Note that MikTeX may fail to update images dynamically for first page {detected by William}.
       </li>
       <li>
-        Help.Contents: Redesign layout of Help:Contents. See: <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_91" title="Help/Contents">Help/Contents</a>
+        Help.Contents: Redesign layout of Help:Contents. See: <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_91" title="Help/Contents" class="xowa-visited">Help/Contents</a>
       </li>
     </ul>
     <p>
@@ -4174,7 +4174,7 @@
         Url: Fix "zh.wikipedia.org" going to "zh.wikipedia.org/wiki/Main_Page" instead of "zh.wikipedia.org/wiki/Wikipedia:首页". [broken since:v1.1.3.1]
       </li>
       <li>
-        Url: Fix "/home/wiki/Main_Page" redirecting to "/home/wiki/home". See: <a href="http://xowa.org/home/wiki/Main_Page.html" id="xolnki_95" title="Main Page">Main_Page</a> [broken since:v1.2.2.1]
+        Url: Fix "/home/wiki/Main_Page" redirecting to "/home/wiki/home". See: <a href="http://xowa.org/home/wiki/Main_Page.html" id="xolnki_95" title="Main Page" class="xowa-visited">Main_Page</a> [broken since:v1.2.2.1]
       </li>
       <li>
         File.Offline: Show images from &lt;imageMap&gt;. See: <a href="https://en.wikipedia.org/wiki/Portal:Canada" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Portal:Canada</a> [broken since:v1.1.3.1]
