--- a/home/wiki/Change_log/v3.10.4.1.html
+++ b/home/wiki/Change_log/v3.10.4.1.html
@@ -2,7 +2,7 @@
 <html dir="ltr">
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-  <title>Help/Download XOWA - XOWA</title>
+  <title>Change log/v3.10.4.1 - XOWA</title>
   <link rel="shortcut icon" href="https://gnosygnu.github.io/xowa/xowa_logo.png" />
   <link rel="stylesheet" href="https://gnosygnu.github.io/xowa/xowa_common.css" type="text/css">
   
@@ -11,83 +11,38 @@
 <div id="mw-page-base" class="noprint"></div>
 <div id="mw-head-base" class="noprint"></div>
 <div id="content" class="mw-body">
-  <h1 id="firstHeading" class="firstHeading"><span>Help/Download XOWA</span></h1>
+  <h1 id="firstHeading" class="firstHeading"><span>Change log/v3.10.4.1</span></h1>
   <div id="bodyContent" class="mw-body-content">
     <div id="siteSub">From XOWA: the free, open-source, offline wiki application</div>
     <div id="contentSub"></div>
     <div id="mw-content-text" lang="en" dir="ltr" class="mw-content-ltr">
     
-    <p>
-      All files are available at <a href="https://github.com/gnosygnu/xowa/releases/" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/releases/</a>
-    </p>
-    <p>
-      For more details about the release, please see the <a href="http://xowa.org/home/wiki/Blog.html" id="xolnki_2" title="Blog">Blog</a> or the <a href="http://xowa.org/home/wiki/Change_log.html" id="xolnki_3" title="Change log">Change log</a>
-    </p>
-    <h2>
-      <span class="mw-headline" id="Windows">Windows</span>
-    </h2>
-    <ul>
-      <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.10.4.1/xowa_app_windows_64_v3.10.4.1.zip" rel="nofollow" class="external text">Windows (64-bit)</a>
-      </li>
-      <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.10.4.1/xowa_app_windows_v3.10.4.1.zip" rel="nofollow" class="external text">Windows (32-bit)</a>
-      </li>
-    </ul>
-    <h2>
-      <span class="mw-headline" id="Linux">Linux</span>
-    </h2>
-    <ul>
-      <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.10.4.1/xowa_app_linux_64_v3.10.4.1.zip" rel="nofollow" class="external text">Linux (64-bit)</a>
-      </li>
-      <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.10.4.1/xowa_app_linux_v3.10.4.1.zip" rel="nofollow" class="external text">Linux (32-bit)</a>
-      </li>
-    </ul>
-    <h2>
-      <span class="mw-headline" id="Mac_OS_X">Mac OS X</span>
-    </h2>
-    <ul>
-      <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.10.4.1/xowa_app_macosx_64_v3.10.4.1.zip" rel="nofollow" class="external text">Mac OS X (64-bit)</a>
-      </li>
-      <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.10.4.1/xowa_app_macosx_v3.10.4.1.zip" rel="nofollow" class="external text">Mac OS X (32-bit)</a>
-      </li>
-    </ul>
-    <h2>
-      <span class="mw-headline" id="Raspberry_Pi">Raspberry Pi</span>
-    </h2>
-    <ul>
-      <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.10.4.1/xowa_app_arm_v3.10.4.1.zip" rel="nofollow" class="external text">Raspberry Pi</a>
-      </li>
-    </ul>
-    <h2>
-      <span class="mw-headline" id="Android">Android</span>
-    </h2>
-    <ul>
-      <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.10.4.1/xowa_app_android_v3.10.4.1.apk" rel="nofollow" class="external text">Android</a>
-      </li>
-    </ul>
-    <h2>
-      <span class="mw-headline" id="Source_code_.28Desktop.29">Source code (Desktop)</span>
-    </h2>
-    <ul>
-      <li>
-        <a href="https://github.com/gnosygnu/xowa/archive/v3.10.4.1.zip" rel="nofollow" class="external text">Source code (Desktop)</a>
-      </li>
-    </ul>
-    <h2>
-      <span class="mw-headline" id="Source_code_.28Android.29">Source code (Android)</span>
-    </h2>
-    <ul>
-      <li>
-        <a href="https://github.com/gnosygnu/xowa_android/archive/master.zip" rel="nofollow" class="external text">Source code (Android)</a>
-      </li>
-    </ul>
+    <div id="toc" class="toc">
+      <div id="toctitle">
+        <h2>
+          Contents
+        </h2>
+      </div>
+      <ul>
+        <li class="toclevel-1 tocsection-1">
+          <a href="#v3.10.4.1_.282016-10-24.29"><span class="tocnumber">1</span> <span class="toctext">v3.10.4.1 (2016-10-24)</span></a> 
+          <ul>
+            <li class="toclevel-2 tocsection-2">
+              <a href="#Wikis"><span class="tocnumber">1.1</span> <span class="toctext">Wikis</span></a>
+            </li>
+            <li class="toclevel-2 tocsection-3">
+              <a href="#PC"><span class="tocnumber">1.2</span> <span class="toctext">PC</span></a>
+            </li>
+            <li class="toclevel-2 tocsection-4">
+              <a href="#Dev"><span class="tocnumber">1.3</span> <span class="toctext">Dev</span></a>
+            </li>
+            <li class="toclevel-2 tocsection-5">
+              <a href="#Android"><span class="tocnumber">1.4</span> <span class="toctext">Android</span></a>
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </div>
     <h2>
       <span class="mw-headline" id="v3.10.4.1_.282016-10-24.29">v3.10.4.1 (2016-10-24)</span>
     </h2>
@@ -101,7 +56,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_4" title="Wiki setup/English wikis" class="xowa-visited">Wiki_setup/English_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_2" title="Wiki setup/English wikis" class="xowa-visited">Wiki_setup/English_wikis</a>
       </dd>
     </dl>
     <ul>
@@ -111,7 +66,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/German_wikis.html" id="xolnki_5" title="Wiki setup/German wikis" class="xowa-visited">Wiki_setup/German_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/German_wikis.html" id="xolnki_3" title="Wiki setup/German wikis" class="xowa-visited">Wiki_setup/German_wikis</a>
       </dd>
     </dl>
     <h3>
@@ -166,7 +121,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Remove nil element from table when nil is 1st member.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wiktionary.org/wiki/仚" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/仚</a> <a href="https://en.wiktionary.org/wiki/仛" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/仛</a><a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/Luaj.html" id="xolnki_6" title="Diagnostics/Scribunto/Luaj" class="xowa-visited">Diagnostics/Scribunto/Luaj</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wiktionary.org/wiki/仚" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/仚</a> <a href="https://en.wiktionary.org/wiki/仛" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/仛</a><a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/Luaj.html" id="xolnki_4" title="Diagnostics/Scribunto/Luaj" class="xowa-visited">Diagnostics/Scribunto/Luaj</a>
       </dd>
     </dl>
     <ul>
@@ -377,7 +332,7 @@
       </li>
     </ul>
     <h3>
-      <span class="mw-headline" id="Android_2">Android</span>
+      <span class="mw-headline" id="Android">Android</span>
     </h3>
     <ul>
       <li>
