change_log_update

--- a/home/wiki/Change_log.html
+++ b/home/wiki/Change_log.html
@@ -422,7 +422,7 @@
     </dl>
     <ul>
       <li>
-        Mass_parse: Fix mass_parse failing on some machines. {detected by anonymous}
+        Mass_parse: Fix mass_parse failing on some machines. {detected by Matthias Polag}
       </li>
     </ul>
     <dl>
