--- a/home/wiki/Change_log/2015.html
+++ b/home/wiki/Change_log/2015.html
@@ -549,7 +549,7 @@
     </p>
     <ul>
       <li>
-        Javascript: Position notification in "top center" not "top right". See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_5" title="Options/Window">Options/Window</a>
+        Javascript: Position notification in "top center" not "top right". See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_5" title="Options/Window" class="xowa-visited">Options/Window</a>
       </li>
     </ul>
     <p>
@@ -845,7 +845,7 @@
     </p>
     <ul>
       <li>
-        Setup: Restore save icon for Option pages {detected by gnosygnu.gui}. See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_11" title="Options/Window">Options/Window</a> [broken since:v2.8.5]
+        Setup: Restore save icon for Option pages {detected by gnosygnu.gui}. See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_11" title="Options/Window" class="xowa-visited">Options/Window</a> [broken since:v2.8.5]
       </li>
     </ul>
     <p>
@@ -1427,7 +1427,7 @@
     </p>
     <ul>
       <li>
-        Special: Add new bookmarks page {assisted by anonymous4}. See: <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_20" title="Special:XowaBookmarks">Special:XowaBookmarks</a>
+        Special: Add new bookmarks page {assisted by anonymous4}. See: <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_20" title="Special:XowaBookmarks" class="xowa-visited">Special:XowaBookmarks</a>
       </li>
     </ul>
     <p>
@@ -1477,13 +1477,13 @@
         Javascript: Upgrade jquery from 1.83 to 1.11.3 (affects nothing known); EX:/xowa/bin/any/xowa/html/res/lib/jquery/jquery-ui-1.11.3.js.
       </li>
       <li>
-        Javascript: Add jquery-ui-1.11.4.js (affects drag-and-drop to reorder bookmarks); EX:/xowa/bin/any/xowa/html/res/lib/jquery-ui/jquery-ui-1.11.4.js. See: <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_22" title="Special:XowaBookmarks">Special:XowaBookmarks</a>
+        Javascript: Add jquery-ui-1.11.4.js (affects drag-and-drop to reorder bookmarks); EX:/xowa/bin/any/xowa/html/res/lib/jquery-ui/jquery-ui-1.11.4.js. See: <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_22" title="Special:XowaBookmarks" class="xowa-visited">Special:XowaBookmarks</a>
       </li>
       <li>
-        Javascript: Add notifyjs-0.3.1.js (affects notification messages when adding bookmarks); EX:/xowa/bin/any/xowa/html/res/lib/notifyjs/notifyjs-0.3.1.js. See: <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_23" title="Special:XowaBookmarks">Special:XowaBookmarks</a>
+        Javascript: Add notifyjs-0.3.1.js (affects notification messages when adding bookmarks); EX:/xowa/bin/any/xowa/html/res/lib/notifyjs/notifyjs-0.3.1.js. See: <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_23" title="Special:XowaBookmarks" class="xowa-visited">Special:XowaBookmarks</a>
       </li>
       <li>
-        Javascript: Add dbui-0.1.1.js (affects database changes for bookmarks); EX:/xowa/bin/any/xowa/html/res/src/xowa/dbui/dbui-0.1.1.js. See: <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_24" title="Special:XowaBookmarks">Special:XowaBookmarks</a>
+        Javascript: Add dbui-0.1.1.js (affects database changes for bookmarks); EX:/xowa/bin/any/xowa/html/res/src/xowa/dbui/dbui-0.1.1.js. See: <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_24" title="Special:XowaBookmarks" class="xowa-visited">Special:XowaBookmarks</a>
       </li>
       <li>
         Source: Refactor Console_adp classes.
@@ -1611,7 +1611,7 @@
         Gui.Status: Default to showing full url, not shortened one; EX:"home/wiki/Main_Page" not "home/Main_Page" {detected by pirate}.
       </li>
       <li>
-        Options: Add option to show short link. See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_25" title="Options/Window">Options/Window</a>
+        Options: Add option to show short link. See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_25" title="Options/Window" class="xowa-visited">Options/Window</a>
       </li>
     </ul>
     <p>
@@ -1926,7 +1926,7 @@
     </p>
     <ul>
       <li>
-        Parser: Clear page variables in prefs_mgr (affects duplicate references on Option pages) {detected by gnosygnu.gui}. See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_39" title="Options/Window">Options/Window</a>
+        Parser: Clear page variables in prefs_mgr (affects duplicate references on Option pages) {detected by gnosygnu.gui}. See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_39" title="Options/Window" class="xowa-visited">Options/Window</a>
       </li>
     </ul>
     <p>
@@ -2067,7 +2067,7 @@
     </p>
     <ul>
       <li>
-        Options: Redesign Option pages to use tab interface {contributed by anonymous4}. See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_40" title="Options/Window">Options/Window</a>
+        Options: Redesign Option pages to use tab interface {contributed by anonymous4}. See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_40" title="Options/Window" class="xowa-visited">Options/Window</a>
       </li>
       <li>
         Gui: Reduce page load errors due to popups (affects page sometimes loading incorrectly when popup is also loading); EX:hover over link and middle-click on it {detected by gnosygnu.gui}. See: <a href="https://en.wikipedia.org/wiki/Mark_Rolston" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Mark_Rolston</a> (See [[Private Mark Drake]] link)
