--- a/home/wiki/Change_log/2013.html
+++ b/home/wiki/Change_log/2013.html
@@ -871,7 +871,7 @@
         (fix) [broken since:v0.9.3] Gallery: Gallery items with no caption would cause page to fail; EX:&lt;gallery&gt;File:A.png&lt;/gallery&gt; {detected by Schnark}. See: <a href="http://de.wikipedia.org/wiki/Lewis_Carroll" rel="nofollow" class="external free">http://de.wikipedia.org/wiki/Lewis_Carroll</a>
       </li>
       <li>
-        (add) Gui: HTML box adjustment for Large fonts and Extra large fonts. See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_17" title="Options/Window">Options/Window</a>
+        (add) Gui: HTML box adjustment for Large fonts and Extra large fonts. See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_17" title="Options/Window" class="xowa-visited">Options/Window</a>
       </li>
       <li>
         (file) [broken since:v0.9.3] Import: Search version2 fails if explicitly added to normal import (which uses search version2 by default).
@@ -1268,7 +1268,7 @@
         (add) Options: Reorganized options pages.
       </li>
       <li>
-        (add) Category: Hidden categories can now be separated from normal categories {requested by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Category.html" id="xolnki_29" title="Options/Category">Options/Category</a>
+        (add) Category: Hidden categories can now be separated from normal categories {requested by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Category.html" id="xolnki_29" title="Options/Category" class="xowa-visited">Options/Category</a>
       </li>
       <li>
         (add) Wikidata: Internationalization for Wikidata JSON formatter {contributed by Schnark}.
