--- a/home/wiki/Dashboard/Wiki_maintenance.html
+++ b/home/wiki/Dashboard/Wiki_maintenance.html
@@ -225,10 +225,10 @@
           de.wikipedia.org
         </td>
         <td class='cell_center'>
-          y
+          n
         </td>
         <td class='cell_center'>
-          1969-12-31
+          2016-10-01
         </td>
         <td class='cell_center'>
           2016-10-01
@@ -237,13 +237,13 @@
           Dump complete
         </td>
         <td class='cell_center'>
-          xdat
+          sqlite3
+        </td>
+        <td class='cell_center'>
+          v0
         </td>
         <td class='cell_center'>
           v1
-        </td>
-        <td class='cell_center'>
-          v2
         </td>
         <td class='cell_center'>
           <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("de.wikipedia.org")'>Import</button>
@@ -533,6 +533,251 @@
         </td>
         <td class='cell_center'>
           <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("en.wikivoyage.org")'>Search</button>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          fr.wikibooks.org
+        </td>
+        <td class='cell_center'>
+          n
+        </td>
+        <td class='cell_center'>
+          2016-10-01
+        </td>
+        <td class='cell_center'>
+          2016-10-01
+        </td>
+        <td class='cell_center'>
+          Dump complete
+        </td>
+        <td class='cell_center'>
+          sqlite3
+        </td>
+        <td class='cell_center'>
+          v0
+        </td>
+        <td class='cell_center'>
+          v1
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("fr.wikibooks.org")'>Import</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("fr.wikibooks.org")'>Category</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("fr.wikibooks.org")'>Search</button>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          fr.wikinews.org
+        </td>
+        <td class='cell_center'>
+          n
+        </td>
+        <td class='cell_center'>
+          2016-10-01
+        </td>
+        <td class='cell_center'>
+          2016-10-01
+        </td>
+        <td class='cell_center'>
+          Dump complete
+        </td>
+        <td class='cell_center'>
+          sqlite3
+        </td>
+        <td class='cell_center'>
+          v0
+        </td>
+        <td class='cell_center'>
+          v1
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("fr.wikinews.org")'>Import</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("fr.wikinews.org")'>Category</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("fr.wikinews.org")'>Search</button>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          fr.wikiquote.org
+        </td>
+        <td class='cell_center'>
+          n
+        </td>
+        <td class='cell_center'>
+          2016-10-01
+        </td>
+        <td class='cell_center'>
+          2016-10-01
+        </td>
+        <td class='cell_center'>
+          Dump complete
+        </td>
+        <td class='cell_center'>
+          sqlite3
+        </td>
+        <td class='cell_center'>
+          v0
+        </td>
+        <td class='cell_center'>
+          v1
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("fr.wikiquote.org")'>Import</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("fr.wikiquote.org")'>Category</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("fr.wikiquote.org")'>Search</button>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          fr.wikisource.org
+        </td>
+        <td class='cell_center'>
+          n
+        </td>
+        <td class='cell_center'>
+          2016-10-01
+        </td>
+        <td class='cell_center'>
+          2016-10-01
+        </td>
+        <td class='cell_center'>
+          Dump complete
+        </td>
+        <td class='cell_center'>
+          sqlite3
+        </td>
+        <td class='cell_center'>
+          v0
+        </td>
+        <td class='cell_center'>
+          v1
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("fr.wikisource.org")'>Import</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("fr.wikisource.org")'>Category</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("fr.wikisource.org")'>Search</button>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          fr.wikiversity.org
+        </td>
+        <td class='cell_center'>
+          n
+        </td>
+        <td class='cell_center'>
+          2016-10-01
+        </td>
+        <td class='cell_center'>
+          2016-10-01
+        </td>
+        <td class='cell_center'>
+          Dump complete
+        </td>
+        <td class='cell_center'>
+          sqlite3
+        </td>
+        <td class='cell_center'>
+          v0
+        </td>
+        <td class='cell_center'>
+          v1
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("fr.wikiversity.org")'>Import</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("fr.wikiversity.org")'>Category</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("fr.wikiversity.org")'>Search</button>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          fr.wikivoyage.org
+        </td>
+        <td class='cell_center'>
+          n
+        </td>
+        <td class='cell_center'>
+          2016-10-01
+        </td>
+        <td class='cell_center'>
+          2016-10-01
+        </td>
+        <td class='cell_center'>
+          Dump complete
+        </td>
+        <td class='cell_center'>
+          sqlite3
+        </td>
+        <td class='cell_center'>
+          v0
+        </td>
+        <td class='cell_center'>
+          v1
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("fr.wikivoyage.org")'>Import</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("fr.wikivoyage.org")'>Category</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("fr.wikivoyage.org")'>Search</button>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          fr.wiktionary.org
+        </td>
+        <td class='cell_center'>
+          n
+        </td>
+        <td class='cell_center'>
+          2016-10-01
+        </td>
+        <td class='cell_center'>
+          2016-10-01
+        </td>
+        <td class='cell_center'>
+          Dump complete
+        </td>
+        <td class='cell_center'>
+          sqlite3
+        </td>
+        <td class='cell_center'>
+          v0
+        </td>
+        <td class='cell_center'>
+          v1
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("fr.wiktionary.org")'>Import</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("fr.wiktionary.org")'>Category</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("fr.wiktionary.org")'>Search</button>
         </td>
       </tr>
       <tr>
