--- a/home/wiki/Main_Page.html
+++ b/home/wiki/Main_Page.html
@@ -258,7 +258,7 @@
         v2.8.1 has a language converter dropdown for the Chinese wikis.
       </li>
       <li>
-        v2.7.3 introduces a new Bookmarks page. See <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_19" title="Special:XowaBookmarks">Special:XowaBookmarks</a>
+        v2.7.3 introduces a new Bookmarks page. See <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_19" title="Special:XowaBookmarks" class="xowa-visited">Special:XowaBookmarks</a>
       </li>
       <li>
         v2.6.5 uses SWT v4.5 and XULRunner v24. See <a href="http://xowa.org/home/wiki/Dev/SWT.html" id="xolnki_20" title="Dev/SWT">Dev/SWT</a> and <a href="http://xowa.org/home/wiki/App/UI/HTML_Browser.html" id="xolnki_21" title="App/UI/HTML Browser">HTML Browser</a>
@@ -300,7 +300,7 @@
             If the font size is too small, right-click and choose Font Increase
           </li>
           <li>
-            If you need more control over the font, customize it on the <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_26" title="Options/Window">Options/Window</a> and <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_27" title="Options/HTML">Options/HTML</a>
+            If you need more control over the font, customize it on the <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_26" title="Options/Window" class="xowa-visited">Options/Window</a> and <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_27" title="Options/HTML">Options/HTML</a>
           </li>
         </ul>
       </li>
