--- a/home/wiki/Wiki_setup/German_wikis.html
+++ b/home/wiki/Wiki_setup/German_wikis.html
@@ -118,86 +118,89 @@
                 <li class="toclevel-3 tocsection-17">
                   <a href="#de.wikipedia.org_Images_.282016-10.29"><span class="tocnumber">4.1.6</span> <span class="toctext">de.wikipedia.org Images (2016-10)</span></a>
                 </li>
+                <li class="toclevel-3 tocsection-18">
+                  <a href="#de.wikipedia.org_patch-2_.282016-10.29"><span class="tocnumber">4.1.7</span> <span class="toctext">de.wikipedia.org patch-2 (2016-10)</span></a>
+                </li>
               </ul>
             </li>
-            <li class="toclevel-2 tocsection-18">
+            <li class="toclevel-2 tocsection-19">
               <a href="#de.wiktionary.org"><span class="tocnumber">4.2</span> <span class="toctext">de.wiktionary.org</span></a> 
               <ul>
-                <li class="toclevel-3 tocsection-19">
+                <li class="toclevel-3 tocsection-20">
                   <a href="#de.wiktionary.org_Articles_.282016-10.29"><span class="tocnumber">4.2.1</span> <span class="toctext">de.wiktionary.org Articles (2016-10)</span></a>
                 </li>
-                <li class="toclevel-3 tocsection-20">
+                <li class="toclevel-3 tocsection-21">
                   <a href="#de.wiktionary.org_Images_.282016-10.29"><span class="tocnumber">4.2.2</span> <span class="toctext">de.wiktionary.org Images (2016-10)</span></a>
                 </li>
               </ul>
             </li>
-            <li class="toclevel-2 tocsection-21">
+            <li class="toclevel-2 tocsection-22">
               <a href="#de.wikisource.org"><span class="tocnumber">4.3</span> <span class="toctext">de.wikisource.org</span></a> 
               <ul>
-                <li class="toclevel-3 tocsection-22">
+                <li class="toclevel-3 tocsection-23">
                   <a href="#de.wikisource.org_Articles_.282016-10.29"><span class="tocnumber">4.3.1</span> <span class="toctext">de.wikisource.org Articles (2016-10)</span></a>
                 </li>
-                <li class="toclevel-3 tocsection-23">
+                <li class="toclevel-3 tocsection-24">
                   <a href="#de.wikisource.org_Images_.282016-10.29"><span class="tocnumber">4.3.2</span> <span class="toctext">de.wikisource.org Images (2016-10)</span></a>
                 </li>
               </ul>
             </li>
-            <li class="toclevel-2 tocsection-24">
+            <li class="toclevel-2 tocsection-25">
               <a href="#de.wikivoyage.org"><span class="tocnumber">4.4</span> <span class="toctext">de.wikivoyage.org</span></a> 
               <ul>
-                <li class="toclevel-3 tocsection-25">
+                <li class="toclevel-3 tocsection-26">
                   <a href="#de.wikivoyage.org_Articles_.282016-10.29"><span class="tocnumber">4.4.1</span> <span class="toctext">de.wikivoyage.org Articles (2016-10)</span></a>
                 </li>
-                <li class="toclevel-3 tocsection-26">
+                <li class="toclevel-3 tocsection-27">
                   <a href="#de.wikivoyage.org_Images_.282016-10.29"><span class="tocnumber">4.4.2</span> <span class="toctext">de.wikivoyage.org Images (2016-10)</span></a>
                 </li>
               </ul>
             </li>
-            <li class="toclevel-2 tocsection-27">
+            <li class="toclevel-2 tocsection-28">
               <a href="#de.wikiquote.org"><span class="tocnumber">4.5</span> <span class="toctext">de.wikiquote.org</span></a> 
               <ul>
-                <li class="toclevel-3 tocsection-28">
+                <li class="toclevel-3 tocsection-29">
                   <a href="#de.wikiquote.org_Articles_.282016-09.29"><span class="tocnumber">4.5.1</span> <span class="toctext">de.wikiquote.org Articles (2016-09)</span></a>
                 </li>
-                <li class="toclevel-3 tocsection-29">
+                <li class="toclevel-3 tocsection-30">
                   <a href="#de.wikiquote.org_Images_.282016-09.29"><span class="tocnumber">4.5.2</span> <span class="toctext">de.wikiquote.org Images (2016-09)</span></a>
                 </li>
               </ul>
             </li>
-            <li class="toclevel-2 tocsection-30">
+            <li class="toclevel-2 tocsection-31">
               <a href="#de.wikibooks.org"><span class="tocnumber">4.6</span> <span class="toctext">de.wikibooks.org</span></a> 
               <ul>
-                <li class="toclevel-3 tocsection-31">
+                <li class="toclevel-3 tocsection-32">
                   <a href="#de.wikibooks.org_Articles_.282016-10.29"><span class="tocnumber">4.6.1</span> <span class="toctext">de.wikibooks.org Articles (2016-10)</span></a>
                 </li>
-                <li class="toclevel-3 tocsection-32">
+                <li class="toclevel-3 tocsection-33">
                   <a href="#de.wikibooks.org_Images_.282016-10.29"><span class="tocnumber">4.6.2</span> <span class="toctext">de.wikibooks.org Images (2016-10)</span></a>
                 </li>
               </ul>
             </li>
-            <li class="toclevel-2 tocsection-33">
+            <li class="toclevel-2 tocsection-34">
               <a href="#de.wikiversity.org"><span class="tocnumber">4.7</span> <span class="toctext">de.wikiversity.org</span></a> 
               <ul>
-                <li class="toclevel-3 tocsection-34">
+                <li class="toclevel-3 tocsection-35">
                   <a href="#de.wikiversity.org_Articles_.282016-09.29"><span class="tocnumber">4.7.1</span> <span class="toctext">de.wikiversity.org Articles (2016-09)</span></a>
                 </li>
-                <li class="toclevel-3 tocsection-35">
+                <li class="toclevel-3 tocsection-36">
                   <a href="#de.wikiversity.org_Images_.282016-09.29"><span class="tocnumber">4.7.2</span> <span class="toctext">de.wikiversity.org Images (2016-09)</span></a>
                 </li>
               </ul>
             </li>
-            <li class="toclevel-2 tocsection-36">
+            <li class="toclevel-2 tocsection-37">
               <a href="#de.wikinews.org"><span class="tocnumber">4.8</span> <span class="toctext">de.wikinews.org</span></a> 
               <ul>
-                <li class="toclevel-3 tocsection-37">
+                <li class="toclevel-3 tocsection-38">
                   <a href="#de.wikinews.org_Articles_.282016-10.29"><span class="tocnumber">4.8.1</span> <span class="toctext">de.wikinews.org Articles (2016-10)</span></a>
                 </li>
-                <li class="toclevel-3 tocsection-38">
+                <li class="toclevel-3 tocsection-39">
                   <a href="#de.wikinews.org_Images_.282016-10.29"><span class="tocnumber">4.8.2</span> <span class="toctext">de.wikinews.org Images (2016-10)</span></a>
                 </li>
               </ul>
             </li>
-            <li class="toclevel-2 tocsection-39">
+            <li class="toclevel-2 tocsection-40">
               <a href="#All_links"><span class="tocnumber">4.9</span> <span class="toctext">All links</span></a>
             </li>
           </ul>
@@ -231,7 +234,7 @@
       <dd>
         <dl>
           <dd>
-            Deutsch Wikipedia - Patch (2016-10) [401.2 MB]
+            Deutsch Wikipedia - Patch: Navbar (2016-10) [401.2 MB]
           </dd>
         </dl>
       </dd>
@@ -268,6 +271,15 @@
         <dl>
           <dd>
             Deutsch Wikipedia - Image Update (2016-10) [1.90 GB]
+          </dd>
+        </dl>
+      </dd>
+    </dl>
+    <dl>
+      <dd>
+        <dl>
+          <dd>
+            Deutsch Wikipedia - Patch: Images (2016-10) [1.95 GB]
           </dd>
         </dl>
       </dd>
@@ -786,6 +798,31 @@
       <ul>
         <li>
           <a href="http://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_2016-10_file_ns.000_db.028.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_2016-10_file_ns.000_db.028.zip</a>
+        </li>
+      </ul>
+    </div>
+    <h4>
+      <span class="mw-headline" id="de.wikipedia.org_patch-2_.282016-10.29">de.wikipedia.org patch-2 (2016-10)</span>
+    </h4>
+    <div style="margin-left: 2em">
+      <ul>
+        <li>
+          <a href="http://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_patch-2_file_core.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_patch-2_file_core.zip</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="http://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_patch-2_file_ns.004_db.002.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_patch-2_file_ns.004_db.002.zip</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="http://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_patch-2_file_ns.100_db.001.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_patch-2_file_ns.100_db.001.zip</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="http://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_patch-2_file_ns.000_db.028.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_patch-2_file_ns.000_db.028.zip</a>
         </li>
       </ul>
     </div>
@@ -1492,6 +1529,10 @@ http://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_2016-10_file_ns.100_d
 http://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_2016-10_file_ns.000_db.028.zip
 http://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_patch-1_core.zip
 http://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_patch-1_html_ns.008.zip
+http://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_patch-2_file_core.zip
+http://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_patch-2_file_ns.004_db.002.zip
+http://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_patch-2_file_ns.100_db.001.zip
+http://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_patch-2_file_ns.000_db.028.zip
 http://archive.org/download/Xowa_dewiki_latest/Xowa_dewiktionary_2016-10_core.zip
 http://archive.org/download/Xowa_dewiki_latest/Xowa_dewiktionary_2016-10_xtn.search.core.zip
 http://archive.org/download/Xowa_dewiki_latest/Xowa_dewiktionary_2016-10_html_ns.000.zip
