fix instructions for command-line build

--- a/home/wiki/App/Basics/Files.html
+++ b/home/wiki/App/Basics/Files.html
@@ -92,7 +92,7 @@
         If an image is found, XOWA downloads a temporary version of the file to <code>C:\xowa\file\simple.wikipedia.org\...</code>
       </li>
       <li>
-        As of v2.5.4.1, XOWA also saves Wikimedia files to <code>C:\xowa\wiki\simple.wikipedia.org\simple.wikipedia.org-file-user.xowa</code>. This ensures that the file is still available even if the temporary version is deleted. Note that the cache on <a href="http://xowa.org/home/wiki/Options/Files.html" id="xolnki_3" title="Options/Files">Options/Files</a> will periodically delete temporary versions
+        As of v2.5.4.1, XOWA also saves Wikimedia files to <code>C:\xowa\wiki\simple.wikipedia.org\simple.wikipedia.org-file-user.xowa</code>. This ensures that the file is still available even if the temporary version is deleted. Note that the cache on <a href="http://xowa.org/home/wiki/Options/Files.html" id="xolnki_3" title="Options/Files" class="xowa-visited">Options/Files</a> will periodically delete temporary versions
       </li>
       <li>
         The HTML is updated to use the temporary version of the file.
@@ -152,7 +152,7 @@
     </p>
     <ul>
       <li>
-        You can configure the cache at <a href="http://xowa.org/home/wiki/Options/Files.html" id="xolnki_4" title="Options/Files">Options/Files</a>
+        You can configure the cache at <a href="http://xowa.org/home/wiki/Options/Files.html" id="xolnki_4" title="Options/Files" class="xowa-visited">Options/Files</a>
       </li>
       <li>
         You can view the cache in <code>C:\xowa\user\xowa.user.anonymous.sqlite3</code>. The table name is <code>file_cache</code>
