--- a/home/wiki/App/Import/English_Wikipedia.html
+++ b/home/wiki/App/Import/English_Wikipedia.html
@@ -138,7 +138,7 @@
       <span class="mw-headline" id="Detailed_start">Detailed start</span>
     </h2>
     <p>
-      See <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_3" title="Wiki setup/English wikis" class="xowa-visited">Wiki_setup/English_wikis</a>
+      See <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_3" title="Wiki setup/English wikis">Wiki_setup/English_wikis</a>
     </p>
   
     </div>
