--- a/home/wiki/App/Import/Manual.html
+++ b/home/wiki/App/Import/Manual.html
@@ -53,7 +53,7 @@
     </ul>
     <dl>
       <dd>
-        This will offer you the greatest flexibility, but requires some familiarity with a command-line interface. You can read more at <a href="http://xowa.org/home/wiki/Dev/Command-line.html" id="xolnki_3" title="Dev/Command-line">Dev/Command-line</a>
+        This will offer you the greatest flexibility, but requires some familiarity with a command-line interface. You can read more at <a href="http://xowa.org/home/wiki/Dev/Command-line.html" id="xolnki_3" title="Dev/Command-line" class="xowa-visited">Dev/Command-line</a>
       </dd>
     </dl>
     <ul>
