--- a/home/wiki/Change_log/2013.html
+++ b/home/wiki/Change_log/2013.html
@@ -521,7 +521,7 @@
     </p>
     <ul>
       <li>
-        (add) File: Added caching system for fsdb thumbs. See: <a href="http://xowa.org/home/wiki/Options/Files.html" id="xolnki_10" title="Options/Files">Options/Files</a>
+        (add) File: Added caching system for fsdb thumbs. See: <a href="http://xowa.org/home/wiki/Options/Files.html" id="xolnki_10" title="Options/Files" class="xowa-visited">Options/Files</a>
       </li>
       <li>
         (add) Release: New build for Mac OS X 64 bit.
@@ -1268,7 +1268,7 @@
         (add) Options: Reorganized options pages.
       </li>
       <li>
-        (add) Category: Hidden categories can now be separated from normal categories {requested by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Category.html" id="xolnki_29" title="Options/Category" class="xowa-visited">Options/Category</a>
+        (add) Category: Hidden categories can now be separated from normal categories {requested by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Category.html" id="xolnki_29" title="Options/Category">Options/Category</a>
       </li>
       <li>
         (add) Wikidata: Internationalization for Wikidata JSON formatter {contributed by Schnark}.
@@ -2215,7 +2215,7 @@
     </p>
     <ul>
       <li>
-        (add) Missing talk/user namespace links can be configured to show red/hidden {requested by Schnark} See <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_54" title="Options/HTML">Options/HTML</a>
+        (add) Missing talk/user namespace links can be configured to show red/hidden {requested by Schnark} See <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_54" title="Options/HTML" class="xowa-visited">Options/HTML</a>
       </li>
       <li>
         (add) Visited pages now color-coded {assisted by Schnark}
