--- a/home/wiki/Change_log/2014.html
+++ b/home/wiki/Change_log/2014.html
@@ -1845,7 +1845,7 @@
         Module.Popups: Increase hover show time from 400 to 600 ms (affects number of accidental hovers while scrolling through page). See: <a href="http://xowa.org/home/wiki/Options/Popups.html" id="xolnki_21" title="Options/Popups">Options/Popups</a>
       </li>
       <li>
-        Options: Add options for configuring paths of other apps. See: <a href="http://xowa.org/home/wiki/Options/Files.html" id="xolnki_22" title="Options/Files">Options/Files</a> <a href="http://xowa.org/home/wiki/Options/Math.html" id="xolnki_23" title="Options/Math">Options/Math</a> <a href="http://xowa.org/home/wiki/Options/Score.html" id="xolnki_24" title="Options/Score">Options/Score</a> <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_25" title="Options/Import" class="xowa-visited">Options/Import</a>
+        Options: Add options for configuring paths of other apps. See: <a href="http://xowa.org/home/wiki/Options/Files.html" id="xolnki_22" title="Options/Files" class="xowa-visited">Options/Files</a> <a href="http://xowa.org/home/wiki/Options/Math.html" id="xolnki_23" title="Options/Math">Options/Math</a> <a href="http://xowa.org/home/wiki/Options/Score.html" id="xolnki_24" title="Options/Score">Options/Score</a> <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_25" title="Options/Import" class="xowa-visited">Options/Import</a>
       </li>
     </ul>
     <p>
@@ -1926,7 +1926,7 @@
         Parser.Underscore: Close preceding paragraph for __TOC__ only (not __NOTOC__) (affects extra line break in one known popup). See: <a href="https://en.wikipedia.org/wiki/Spain" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Spain</a>
       </li>
       <li>
-        Options: Allow "&lt;" inside &lt;input&gt;'s value. See: <a href="http://xowa.org/home/wiki/Options/Files.html" id="xolnki_26" title="Options/Files">Options/Files</a>
+        Options: Allow "&lt;" inside &lt;input&gt;'s value. See: <a href="http://xowa.org/home/wiki/Options/Files.html" id="xolnki_26" title="Options/Files" class="xowa-visited">Options/Files</a>
       </li>
     </ul>
     <p>
@@ -2232,7 +2232,7 @@
         Javascript: Add option to control default show / hide state of Table of Contents. See: <a href="http://xowa.org/home/wiki/Options/Wiki/HTML.html" id="xolnki_37" title="Options/Wiki/HTML">Options/Wiki/HTML</a> <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Table_of_contents.html" id="xolnki_38" title="Diagnostics/Javascript/Table of contents">Diagnostics/Javascript/Table_of_contents</a>
       </li>
       <li>
-        Javascript: Add option to control default show / hide state of collapsible tables. See: <a href="http://xowa.org/home/wiki/Options/Wiki/HTML.html" id="xolnki_39" title="Options/Wiki/HTML">Options/Wiki/HTML</a> <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Collapsible.html" id="xolnki_40" title="Diagnostics/Javascript/Collapsible">Diagnostics/Javascript/Collapsible</a>
+        Javascript: Add option to control default show / hide state of collapsible tables. See: <a href="http://xowa.org/home/wiki/Options/Wiki/HTML.html" id="xolnki_39" title="Options/Wiki/HTML">Options/Wiki/HTML</a> <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Collapsible.html" id="xolnki_40" title="Diagnostics/Javascript/Collapsible" class="xowa-visited">Diagnostics/Javascript/Collapsible</a>
       </li>
       <li>
         Javascript: Add option to control default show / hide state of NavFrames. See: <a href="http://xowa.org/home/wiki/Options/Wiki/HTML.html" id="xolnki_41" title="Options/Wiki/HTML">Options/Wiki/HTML</a> <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/NavFrame.html" id="xolnki_42" title="Diagnostics/Javascript/NavFrame">Diagnostics/Javascript/NavFrame</a>
@@ -3519,7 +3519,7 @@
     </p>
     <ul>
       <li>
-        Import: Update command-line example to specify bz2 instead of xml; EX:src_bz2_fil_('file.xml.bz2') {detected by Anselm}. See: <a href="http://xowa.org/home/wiki/Dev/Command-line.html" id="xolnki_80" title="Dev/Command-line">Dev/Command-line</a>
+        Import: Update command-line example to specify bz2 instead of xml; EX:src_bz2_fil_('file.xml.bz2') {detected by Anselm}. See: <a href="http://xowa.org/home/wiki/Dev/Command-line.html" id="xolnki_80" title="Dev/Command-line" class="xowa-visited">Dev/Command-line</a>
       </li>
       <li>
         Command-line: Add comment explaining XOWA_DIR variable for Linux / Mac OS X shell scripts; EX:xowa_linux.sh {detected by DomasoFan}.
@@ -3904,7 +3904,7 @@
         Import: Default to wikimedia.org as primary dump server {detected by Anselm}. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_85" title="Options/Import" class="xowa-visited">Options/Import</a>
       </li>
       <li>
-        Import: Default cache to 100 MB max and 75 MB min. See: <a href="http://xowa.org/home/wiki/Options/Files.html" id="xolnki_86" title="Options/Files">Options/Files</a>
+        Import: Default cache to 100 MB max and 75 MB min. See: <a href="http://xowa.org/home/wiki/Options/Files.html" id="xolnki_86" title="Options/Files" class="xowa-visited">Options/Files</a>
       </li>
       <li>
         Options: Reorganize tab layout. See: <a href="http://xowa.org/home/wiki/Options.html" id="xolnki_87" title="Options" class="xowa-visited">Options</a>
