--- a/home/wiki/Change_log/2015.html
+++ b/home/wiki/Change_log/2015.html
@@ -1885,7 +1885,7 @@
         File: Show File page if clicking on image without commons while offline (using nearest sized image). See: <a href="https://en.wikipedia.org/wiki/File:Volcán_Chimborazo,_%22El_Taita_Chimborazo%22.jpg" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/File:Volcán_Chimborazo,_%22El_Taita_Chimborazo%22.jpg</a>
       </li>
       <li>
-        File: Create new caching system. See: <a href="http://xowa.org/home/wiki/Options/Files.html" id="xolnki_35" title="Options/Files">Options/Files</a>
+        File: Create new caching system. See: <a href="http://xowa.org/home/wiki/Options/Files.html" id="xolnki_35" title="Options/Files" class="xowa-visited">Options/Files</a>
       </li>
       <li>
         Doc: Document command-line build for generating image databases. See: <a href="http://xowa.org/home/wiki/Dev/Command-line/Thumbs.html" id="xolnki_36" title="Dev/Command-line/Thumbs">Dev/Command-line/Thumbs</a>
@@ -2497,7 +2497,7 @@
         Database: Embed CSS in wiki databases.
       </li>
       <li>
-        Import: Change import script. See: <a href="http://xowa.org/home/wiki/Dev/Command-line.html" id="xolnki_49" title="Dev/Command-line">Dev/Command-line</a>
+        Import: Change import script. See: <a href="http://xowa.org/home/wiki/Dev/Command-line.html" id="xolnki_49" title="Dev/Command-line" class="xowa-visited">Dev/Command-line</a>
       </li>
     </ul>
     <p>
@@ -2924,7 +2924,7 @@
     </p>
     <ul>
       <li>
-        File: Change default for Files Retrieval to true (affects images not loading if user forgets to change default). See: <a href="http://xowa.org/home/wiki/Options/Files.html" id="xolnki_52" title="Options/Files">Options/Files</a>
+        File: Change default for Files Retrieval to true (affects images not loading if user forgets to change default). See: <a href="http://xowa.org/home/wiki/Options/Files.html" id="xolnki_52" title="Options/Files" class="xowa-visited">Options/Files</a>
       </li>
       <li>
         Parser.Template: Ignore safesubst for IsSubsting (affects 1 en.w page failing to load with stack overflow error). See: <a href="https://en.wikipedia.org/wiki/Wikipedia:WikiProject_Celtic_history_and_culture" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Wikipedia:WikiProject_Celtic_history_and_culture</a>
