--- a/home/wiki/Help/Privacy/Desktop.html
+++ b/home/wiki/Help/Privacy/Desktop.html
@@ -171,7 +171,7 @@
       File download is disabled by default. All files are downloaded to the following directory: <code>/xowa/file</code>.
     </p>
     <p>
-      If you've enabled it, you can disable it at <a href="http://xowa.org/home/wiki/Options/Files.html" id="xolnki_7" title="Options/Files">Options/Files</a>
+      If you've enabled it, you can disable it at <a href="http://xowa.org/home/wiki/Options/Files.html" id="xolnki_7" title="Options/Files" class="xowa-visited">Options/Files</a>
     </p>
     <h2>
       <span class="mw-headline" id="Math_images_.28LaTEX_only.29">Math images (LaT<sub>E</sub>X only)</span>
