--- a/home/wiki/Main_Page.html
+++ b/home/wiki/Main_Page.html
@@ -219,7 +219,7 @@
     </h5>
     <ul>
       <li>
-        Go to <a href="http://xowa.org/home/wiki/Wiki_setup/Listing.html" id="xolnki_15" title="Wiki setup/Listing" class="xowa-visited">Wiki_setup/Listing</a>
+        Go to <a href="http://xowa.org/home/wiki/Wiki_setup/Listing.html" id="xolnki_15" title="Wiki setup/Listing">Wiki_setup/Listing</a>
       </li>
       <li>
         Navigate to your wiki page from the list
@@ -300,7 +300,7 @@
             If the font size is too small, right-click and choose Font Increase
           </li>
           <li>
-            If you need more control over the font, customize it on the <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_26" title="Options/Window" class="xowa-visited">Options/Window</a> and <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_27" title="Options/HTML">Options/HTML</a>
+            If you need more control over the font, customize it on the <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_26" title="Options/Window" class="xowa-visited">Options/Window</a> and <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_27" title="Options/HTML" class="xowa-visited">Options/HTML</a>
           </li>
         </ul>
       </li>
@@ -428,7 +428,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Diagnostics.html" id="xolnki_42" title="Diagnostics">Diagnostics</a>
+          <a href="http://xowa.org/home/wiki/Diagnostics.html" id="xolnki_42" title="Diagnostics" class="xowa-visited">Diagnostics</a>
         </td>
         <td>
           Run test pages to make sure that XOWA works on your system.
