--- a/home/wiki/Help/Contents.html
+++ b/home/wiki/Help/Contents.html
@@ -178,10 +178,10 @@
         <td style='width:20%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/Dev/Command-line.html" id="xolnki_24" title="Dev/Command-line">Overview</a>
+              <a href="http://xowa.org/home/wiki/Dev/Command-line.html" id="xolnki_24" title="Dev/Command-line" class="xowa-visited">Overview</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/Dev/Command-line/Dumps.html" id="xolnki_25" title="Dev/Command-line/Dumps">Image dumps</a>
+              <a href="http://xowa.org/home/wiki/Dev/Command-line/Dumps.html" id="xolnki_25" title="Dev/Command-line/Dumps" class="xowa-visited">Image dumps</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/Dev/Command-line/Wikidata.html" id="xolnki_26" title="Dev/Command-line/Wikidata">Wikidata</a>
@@ -277,7 +277,7 @@
         <td style='width:30%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/Diagnostics.html" id="xolnki_43" title="Diagnostics">Diagnostics</a>
+              <a href="http://xowa.org/home/wiki/Diagnostics.html" id="xolnki_43" title="Diagnostics" class="xowa-visited">Diagnostics</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/App/Setup/Installation/Self_extracting_exe.html" id="xolnki_44" title="App/Setup/Installation/Self extracting exe">Self extracting exe</a>
