--- a/home/wiki/Options.html
+++ b/home/wiki/Options.html
@@ -410,7 +410,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Files.html" id="xolnki_12" title="Options/Files">Files</a>
+              <a href="http://xowa.org/home/wiki/Options/Files.html" id="xolnki_12" title="Options/Files" class="xowa-visited">Files</a>
             </td>
             <td>
               File / image options
@@ -434,7 +434,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Category.html" id="xolnki_15" title="Options/Category" class="xowa-visited">Category</a>
+              <a href="http://xowa.org/home/wiki/Options/Category.html" id="xolnki_15" title="Options/Category">Category</a>
             </td>
             <td>
               Category options
@@ -442,7 +442,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Import_Dansguardian.html" id="xolnki_16" title="Options/Import Dansguardian" class="xowa-visited">Import Dansguardian</a>
+              <a href="http://xowa.org/home/wiki/Options/Import_Dansguardian.html" id="xolnki_16" title="Options/Import Dansguardian">Import Dansguardian</a>
             </td>
             <td>
               Import using Dansguardian filters
@@ -455,7 +455,7 @@ li.active a, li.active a:hover
         <table class='options_table'>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_17" title="Options/HTML">Appearance</a>
+              <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_17" title="Options/HTML" class="xowa-visited">Appearance</a>
             </td>
             <td>
               HTML page font and custom CSS
@@ -463,7 +463,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Wiki_HTML.html" id="xolnki_18" title="Options/Wiki HTML">Wiki</a>
+              <a href="http://xowa.org/home/wiki/Options/Wiki_HTML.html" id="xolnki_18" title="Options/Wiki HTML" class="xowa-visited">Wiki</a>
             </td>
             <td>
               Miscellaneous wiki HTML options
