--- a/home/wiki/Wiki_setup/English_wikis.html
+++ b/home/wiki/Wiki_setup/English_wikis.html
@@ -118,86 +118,89 @@
                 <li class="toclevel-3 tocsection-17">
                   <a href="#en.wikipedia.org_Images_.282016-10.29"><span class="tocnumber">4.1.6</span> <span class="toctext">en.wikipedia.org Images (2016-10)</span></a>
                 </li>
+                <li class="toclevel-3 tocsection-18">
+                  <a href="#en.wikipedia.org_patch-1_.282016-10.29"><span class="tocnumber">4.1.7</span> <span class="toctext">en.wikipedia.org patch-1 (2016-10)</span></a>
+                </li>
               </ul>
             </li>
-            <li class="toclevel-2 tocsection-18">
+            <li class="toclevel-2 tocsection-19">
               <a href="#en.wiktionary.org"><span class="tocnumber">4.2</span> <span class="toctext">en.wiktionary.org</span></a> 
               <ul>
-                <li class="toclevel-3 tocsection-19">
+                <li class="toclevel-3 tocsection-20">
                   <a href="#en.wiktionary.org_Articles_.282016-10.29"><span class="tocnumber">4.2.1</span> <span class="toctext">en.wiktionary.org Articles (2016-10)</span></a>
                 </li>
-                <li class="toclevel-3 tocsection-20">
+                <li class="toclevel-3 tocsection-21">
                   <a href="#en.wiktionary.org_Images_.282016-10.29"><span class="tocnumber">4.2.2</span> <span class="toctext">en.wiktionary.org Images (2016-10)</span></a>
                 </li>
               </ul>
             </li>
-            <li class="toclevel-2 tocsection-21">
+            <li class="toclevel-2 tocsection-22">
               <a href="#en.wikisource.org"><span class="tocnumber">4.3</span> <span class="toctext">en.wikisource.org</span></a> 
               <ul>
-                <li class="toclevel-3 tocsection-22">
+                <li class="toclevel-3 tocsection-23">
                   <a href="#en.wikisource.org_Articles_.282016-10.29"><span class="tocnumber">4.3.1</span> <span class="toctext">en.wikisource.org Articles (2016-10)</span></a>
                 </li>
-                <li class="toclevel-3 tocsection-23">
+                <li class="toclevel-3 tocsection-24">
                   <a href="#en.wikisource.org_Images_.282016-10.29"><span class="tocnumber">4.3.2</span> <span class="toctext">en.wikisource.org Images (2016-10)</span></a>
                 </li>
               </ul>
             </li>
-            <li class="toclevel-2 tocsection-24">
+            <li class="toclevel-2 tocsection-25">
               <a href="#en.wikivoyage.org"><span class="tocnumber">4.4</span> <span class="toctext">en.wikivoyage.org</span></a> 
               <ul>
-                <li class="toclevel-3 tocsection-25">
+                <li class="toclevel-3 tocsection-26">
                   <a href="#en.wikivoyage.org_Articles_.282016-10.29"><span class="tocnumber">4.4.1</span> <span class="toctext">en.wikivoyage.org Articles (2016-10)</span></a>
                 </li>
-                <li class="toclevel-3 tocsection-26">
+                <li class="toclevel-3 tocsection-27">
                   <a href="#en.wikivoyage.org_Images_.282016-10.29"><span class="tocnumber">4.4.2</span> <span class="toctext">en.wikivoyage.org Images (2016-10)</span></a>
                 </li>
               </ul>
             </li>
-            <li class="toclevel-2 tocsection-27">
+            <li class="toclevel-2 tocsection-28">
               <a href="#en.wikiquote.org"><span class="tocnumber">4.5</span> <span class="toctext">en.wikiquote.org</span></a> 
               <ul>
-                <li class="toclevel-3 tocsection-28">
+                <li class="toclevel-3 tocsection-29">
                   <a href="#en.wikiquote.org_Articles_.282016-10.29"><span class="tocnumber">4.5.1</span> <span class="toctext">en.wikiquote.org Articles (2016-10)</span></a>
                 </li>
-                <li class="toclevel-3 tocsection-29">
+                <li class="toclevel-3 tocsection-30">
                   <a href="#en.wikiquote.org_Images_.282016-10.29"><span class="tocnumber">4.5.2</span> <span class="toctext">en.wikiquote.org Images (2016-10)</span></a>
                 </li>
               </ul>
             </li>
-            <li class="toclevel-2 tocsection-30">
+            <li class="toclevel-2 tocsection-31">
               <a href="#en.wikibooks.org"><span class="tocnumber">4.6</span> <span class="toctext">en.wikibooks.org</span></a> 
               <ul>
-                <li class="toclevel-3 tocsection-31">
+                <li class="toclevel-3 tocsection-32">
                   <a href="#en.wikibooks.org_Articles_.282016-10.29"><span class="tocnumber">4.6.1</span> <span class="toctext">en.wikibooks.org Articles (2016-10)</span></a>
                 </li>
-                <li class="toclevel-3 tocsection-32">
+                <li class="toclevel-3 tocsection-33">
                   <a href="#en.wikibooks.org_Images_.282016-10.29"><span class="tocnumber">4.6.2</span> <span class="toctext">en.wikibooks.org Images (2016-10)</span></a>
                 </li>
               </ul>
             </li>
-            <li class="toclevel-2 tocsection-33">
+            <li class="toclevel-2 tocsection-34">
               <a href="#en.wikiversity.org"><span class="tocnumber">4.7</span> <span class="toctext">en.wikiversity.org</span></a> 
               <ul>
-                <li class="toclevel-3 tocsection-34">
+                <li class="toclevel-3 tocsection-35">
                   <a href="#en.wikiversity.org_Articles_.282016-10.29"><span class="tocnumber">4.7.1</span> <span class="toctext">en.wikiversity.org Articles (2016-10)</span></a>
                 </li>
-                <li class="toclevel-3 tocsection-35">
+                <li class="toclevel-3 tocsection-36">
                   <a href="#en.wikiversity.org_Images_.282016-10.29"><span class="tocnumber">4.7.2</span> <span class="toctext">en.wikiversity.org Images (2016-10)</span></a>
                 </li>
               </ul>
             </li>
-            <li class="toclevel-2 tocsection-36">
+            <li class="toclevel-2 tocsection-37">
               <a href="#en.wikinews.org"><span class="tocnumber">4.8</span> <span class="toctext">en.wikinews.org</span></a> 
               <ul>
-                <li class="toclevel-3 tocsection-37">
+                <li class="toclevel-3 tocsection-38">
                   <a href="#en.wikinews.org_Articles_.282016-10.29"><span class="tocnumber">4.8.1</span> <span class="toctext">en.wikinews.org Articles (2016-10)</span></a>
                 </li>
-                <li class="toclevel-3 tocsection-38">
+                <li class="toclevel-3 tocsection-39">
                   <a href="#en.wikinews.org_Images_.282016-10.29"><span class="tocnumber">4.8.2</span> <span class="toctext">en.wikinews.org Images (2016-10)</span></a>
                 </li>
               </ul>
             </li>
-            <li class="toclevel-2 tocsection-39">
+            <li class="toclevel-2 tocsection-40">
               <a href="#All_links"><span class="tocnumber">4.9</span> <span class="toctext">All links</span></a>
             </li>
           </ul>
@@ -268,6 +271,15 @@
         <dl>
           <dd>
             English Wikipedia - Image Update (2016-10) [4.65 GB]
+          </dd>
+        </dl>
+      </dd>
+    </dl>
+    <dl>
+      <dd>
+        <dl>
+          <dd>
+            English Wikipedia - Patch: Images (2016-10) [2.66 GB]
           </dd>
         </dl>
       </dd>
@@ -1116,6 +1128,36 @@
       <ul>
         <li>
           <a href="http://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-10_file_ns.000_db.066.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-10_file_ns.000_db.066.zip</a>
+        </li>
+      </ul>
+    </div>
+    <h4>
+      <span class="mw-headline" id="en.wikipedia.org_patch-1_.282016-10.29">en.wikipedia.org patch-1 (2016-10)</span>
+    </h4>
+    <div style="margin-left: 2em">
+      <ul>
+        <li>
+          <a href="http://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_patch-1_file_core.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_patch-1_file_core.zip</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="http://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_patch-1_file_ns.000_db.066.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_patch-1_file_ns.000_db.066.zip</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="http://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_patch-1_file_ns.004_db.002.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_patch-1_file_ns.004_db.002.zip</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="http://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_patch-1_file_ns.100_db.001.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_patch-1_file_ns.100_db.001.zip</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="http://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_patch-1_file_ns.008_db.001.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_patch-1_file_ns.008_db.001.zip</a>
         </li>
       </ul>
     </div>
@@ -2043,6 +2085,11 @@ http://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-10_file_ns.100_d
 http://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-10_file_ns.004_db.002.zip
 http://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-10_file_ns.000_db.065.zip
 http://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-10_file_ns.000_db.066.zip
+http://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_patch-1_file_core.zip
+http://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_patch-1_file_ns.000_db.066.zip
+http://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_patch-1_file_ns.004_db.002.zip
+http://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_patch-1_file_ns.100_db.001.zip
+http://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_patch-1_file_ns.008_db.001.zip
 http://archive.org/download/Xowa_enwiki_latest/Xowa_enwiktionary_2016-10_core.zip
 http://archive.org/download/Xowa_enwiki_latest/Xowa_enwiktionary_2016-10_xtn.search.core.zip
 http://archive.org/download/Xowa_enwiki_latest/Xowa_enwiktionary_2016-10_html_ns.000.zip
