blog entry for 2016-10-30

--- a/home/wiki/Change_log.html
+++ b/home/wiki/Change_log.html
@@ -236,7 +236,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_2" title="Wiki setup/English wikis">Wiki_setup/English_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_2" title="Wiki setup/English wikis" class="xowa-visited">Wiki_setup/English_wikis</a>
       </dd>
     </dl>
     <ul>
@@ -540,7 +540,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Include latest download central database.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_5" title="Wiki setup/English wikis">Wiki_setup/English_wikis</a> <a href="http://xowa.org/home/wiki/Wiki_setup/German_wikis.html" id="xolnki_6" title="Wiki setup/German wikis">Wiki_setup/German_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_5" title="Wiki setup/English wikis" class="xowa-visited">Wiki_setup/English_wikis</a> <a href="http://xowa.org/home/wiki/Wiki_setup/German_wikis.html" id="xolnki_6" title="Wiki setup/German wikis">Wiki_setup/German_wikis</a>
       </dd>
     </dl>
     <h2>
@@ -556,7 +556,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_7" title="Wiki setup/English wikis">Wiki_setup/English_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_7" title="Wiki setup/English wikis" class="xowa-visited">Wiki_setup/English_wikis</a>
       </dd>
     </dl>
     <ul>
